force-app/main/default/objects/Classification_Master__c/Classification_Master__c.object-meta.xml
<CustomObject>
    <label>Classification Master</label>
    <nameField>
        <label>Classification Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>