force-app/main/default/objects/Classification_Master__c/fields/Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code__c</fullName>
    <label>Classification Master Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>