force-app/main/default/objects/Classification_Master__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Admin Created</fullName>
            </value>
            <value>
                <fullName>HR Integration</fullName>
            </value>
            <value>
                <fullName>Self Nominated</fullName>
            </value>
            <value>
                <fullName>Finance Integration</fullName>
            </value>
            <value>
                <fullName>RP Integration</fullName>
            </value>
            <value>
                <fullName>SIS Integration</fullName>
            </value>
            <value>
                <fullName>MyPub Integration</fullName>
            </value>
            <value>
                <fullName>Marketing Integration</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SFDC001</fullName>
            </value>
            <value>
                <fullName>SFDC009</fullName>
            </value>
            <value>
                <fullName>SFDC010</fullName>
            </value>
            <value>
                <fullName>SFDC012</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
            <value>
                <fullName>QSES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>