force-app/main/default/objects/Classification_Master__c/fields/Full_Classification_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Classification_Name__c</fullName>
    <label>Full Classification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>