force-app/main/default/objects/Classification_Master__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fields of Research (FOR)</fullName>
                <label>FOR - Fields of Research</label>
            </value>
            <value>
                <fullName>Fields of Research - 2008 (FOR - 08)</fullName>
                <label>FOR 08 - Fields of Research - 2008</label>
            </value>
            <value>
                <fullName>Socio-economic Objective (SEO)</fullName>
                <label>SEO - Socio-economic Objective</label>
            </value>
            <value>
                <fullName>Socio-economic Objective - 2008 (SEO - 08)</fullName>
                <label>SEO 08 - Socio-economic Objective - 2008</label>
            </value>
            <value>
                <fullName>Type of Activity (TOA)</fullName>
                <label>TOA - Type of Activity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>