force-app/main/default/objects/Classification_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Classification_Code__c</columns>
    <columns>Full_Classification_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>